# shapka

./: Cargo.toml  README.md  shapkakv-shapkacert-20240225.pfx  tsconfig.json
.github/workflows/: deploy.yml  rust.yml
src/: constants.rs  game.rs  game_events_controller.rs  game_init_controller.rs  home_pages_controller.rs  main.rs  players_controller.rs  turns_controller.rs  words_controller.rs
src/auth/: auth.rs  authenticator.rs  mod.rs  utils.rs
src/controllers/: game_events_controller.rs  game_init_controller.rs  mod.rs  pages_controller.rs  periodic_checks_controller.rs  players_controller.rs  turns_controller.rs  words_controller.rs
src/extentions/: arc_string.rs  mod.rs  vec_utils.rs
src/models/: game.rs
src/throttling/: mod.rs  rate_limiting.rs  utils.rs
static/: await.html  await_and_host.js  create.html  create_or_join.js  home.html  host.html  join.html  style.css  styles.css  whiteboard.html  whiteboard.js
static/audio/: mbt_gadove.m4a  mbt_nema_kvo.m4a  mbt_risk.m4a
static/html/: await.html  create.html  game.html  home.html  host.html  join.html  results.html
static/js/: await_and_host.js  constants.js  create_or_join.js  game.js  results.js  utils.js
static/js/utils/: general_utils.js  string_utils.js  ui_utils.js
static/ts/: await_and_host.ts  constants.js  constants.ts  create_or_join.js  create_or_join.ts  game.ts  results.js  results.ts
static/ts/utils/: general_utils.ts  string_utils.ts  ui_utils.js  ui_utils.ts  url_utils.js  url_utils.ts
ui-test/: index.html  script.js  styles.css
