[package]
name = "shapka"
version = "0.0.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
rocket = { version = "0.5.0", features = ["json"] }
rand = "0.8"
chashmap = "2.2.2"
num-derive = "0.2.4"
num-traits = "0.2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.111" }
string-builder = "0.2.0"
guid-create = "0.3.1"
json = "0.12.4"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
chrono = "0.4.41"

[dev-dependencies]
rand = "0.8"
